# practice1-EDD

./: CMakeLists.txt  main.cpp
MakeFilePractice1/: Makefile  main.cpp
MakeFilePractice1/cards/: Card.cpp  Card.h  Deck.h  LinkedList.cpp  LinkedList.h  Queue.cpp  Queue.h
backend/board/: Board.cpp  Board.h
backend/cards/: Card.cpp  Card.h  Deck.cpp  Deck.h  LinkedList.cpp  LinkedList.h  Node.cpp  Node.h  Queue.cpp  Queue.h  Stack.cpp  Stack.h
